@@ -1,3 +1,4 @@
+2022-12-03: [FEATURE] Add extended popup to `Mpris2`
 2022-12-02: [BUGFUX] Fix startup slowdown caused by `ALSAWidget` 
 2022-12-02: [BUGHFIX] Fixed bug when drawing masked images with `Image` widget
 2022-12-01: [FEATURE] Add ability to fine tune position of `AnalogueClock`
